<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/_8sdp"
              android:background="@drawable/edit_item"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/tv_type1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_160sdp"
                android:padding="@dimen/_4sdp"
                android:text="@string/type1"
                android:textColor="@android:color/black"
                android:background="@android:color/holo_purple"/>
        <TextView
                android:id="@+id/tv_type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:text="@string/type2"
                android:textColor="@android:color/black"
                android:background="@android:color/holo_green_light"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
                android:id="@+id/img_culinary"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">
            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16sdp"/>
            <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/desc"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:ellipsize="end"
                    android:maxLines="4"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_orange_light"
            android:layout_marginLeft="@dimen/_215sdp"/>

</LinearLayout>